syntax = "proto3";
package msg;



message CS_Ping {
  int64 Timestamp = 1;
}
message SC_Pong {
  int64 Timestamp = 1;
}

message Str_Int {
    string Str = 1;
    int64 N = 2;
}

message Map_StrStr {
    string K = 1;
    string V = 2;
}
message PosInfo {
    int64 Pos = 1;
    int64 Seq = 2;
}






message Ccy {
    int64 Id = 1;
    int64 Val = 2;
}

// 排行榜第一的
message C_RankTop { // msgid: 4614
}

message GS_RankTop_R { // msgid: 4615
    int64 ErrorCode = 2;
    C_RankTop MSGDATA = 3;
}



message LoginData {
    int64 Exp = 1; // 经验值
}

message Id_Int {
    int64 Id = 1;
    int64 N = 2;
}

// 时间同步
message C_TimeSync { // msgid: 3002
}

message GS_TimeSync_R { // msgid: 3003
    int64 Ts = 1;
    int64 ErrorCode = 2;
    C_TimeSync MSGDATA = 3;
}

// 拉取登录信息
message C_GetLoginData { // msgid: 3004
}

message GS_GetLoginData_R { // msgid: 3005
	LoginData Data = 1;
    int64 ErrorCode = 2;
    C_GetLoginData MSGDATA = 3;
}

// 报错信息
message C_ErrMsgInfo { // msgid: 3006
}

message GS_ErrMsgInfo_R { // msgid: 3007
    string Str = 1;
    int64 ErrorCode = 2;
    C_ErrMsgInfo MSGDATA = 3;
}

// 登录
message C_Login { // msgid: 1000
	string UserName = 1;
    string PassWord = 2; // 参数 1
}

message GW_Login_R { // msgid: 1001
    int64 ErrorCode = 1;
    C_Login MSGDATA = 2;
}




// 注册网关
message GW_RegisterGate { // msgid: 1200
    int64 Id = 1;
}

message GS_RegisterGate_R { // msgid: 1201
    bool Success = 1;
    int64 ErrorCode = 2;
    GW_RegisterGate MSGDATA = 3;
}

// 玩家上线
message GW_UserOnline { // msgid: 1202
    uint64 Sid = 1;
    string UserId = 2;
    string AuthId = 3;
    string Svr0 = 4;
    string Sdk = 5;
    string Plat = 6;
    string DevId = 7;
    string LoginIP = 8;
}

// 通知 game 玩家登出
message GW_LogoutPlayer { // msgid: 1203
    uint64 Sid = 1;
}
