syntax = "proto3";
 
message PlayerInfo {
    int32 userId = 1;
    int32 gender = 2;
    string userName = 3;
    string nickName = 4;
}

message LoginReq {
    string account = 1;
    string password = 2;
    int32 server_id = 3;
}
message LoginRes {
    int32 code = 1;
    string token = 2;
}


