"use strict";
cc._RF.push(module, '5aff2HyQ6hNvoRzo4FFvtNR', 'msgname');
// resources/proto/msgname.ts

"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.msgname = void 0;
exports.msgname = {
    1000: "C_Login",
    1001: "GW_Login_R",
    1200: "GW_RegisterGate",
    1201: "GS_RegisterGate_R",
    1202: "GW_UserOnline",
    1203: "GW_LogoutPlayer",
    3002: "C_TimeSync",
    3003: "GS_TimeSync_R",
    3004: "C_GetLoginData",
    3005: "GS_GetLoginData_R",
    3006: "C_ErrMsgInfo",
    3007: "GS_ErrMsgInfo_R",
    4614: "C_RankTop",
    4615: "GS_RankTop_R",
};

cc._RF.pop();